--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 pip install pandas
-conda install pytorch==1.8.0 torchvision==0.9.0 torchaudio==0.8.0 cudatoolkit=11.1 -c pytorch -c conda-forge
+conda install pytorch==1.11.0 torchvision==0.12.0 torchaudio==0.11.0 cudatoolkit=11.3 -c pytorch
 pip install transformers
 pip install tqdm
+pip install sklearn
+pip install numpy
+pip install wandb
