--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-pip install pandas
-conda install pytorch==1.11.0 torchvision==0.12.0 torchaudio==0.11.0 cudatoolkit=11.3 -c pytorch
-pip install transformers
-pip install tqdm
-pip install sklearn
-pip install numpy
-pip install wandb
+pandas
+transformers
+tqdm
+sklearn
+numpy
+wandb
